# android_hardware_samsung_freeril

./: .gitignore  AUTHORS  Android.mk  Makefile.am  configure.ac  generate-gitfiles.sh
database/: Android.mk
database/operators-database/: Android.mk  operators.shipped.sql
database/secril-database-extractor/: Android.mk  arm_dl.c  arm_dl.h  main.c
include/: secril-client-compat.h
include/freeril/: ICrossClientService.h  oem.h
libandroidhal/: Android.mk  AndroidFileSystem.cpp  AndroidFileSystem.h  AndroidHAL.cpp  AndroidHAL.h  CStyleException.cpp  CStyleException.h  Makefile.am  NativeFile.cpp  NativeFile.h  PHONETIPCSocket.cpp  PHONETIPCSocket.h  PHONETIPCTransport.cpp  PHONETIPCTransport.h  SysfsControlledDevice.cpp  SysfsControlledDevice.h  SysfsEHCISwitcher.cpp  SysfsEHCISwitcher.h  SysfsModemControl.cpp  SysfsModemControl.h  USBIPCSocket.cpp  USBIPCSocket.h  USBIPCTransport.cpp  USBIPCTransport.h  modem_prj.h
libsamsung-ipc/: Android.mk  CStyleException.cpp  CStyleException.h  DataStream.cpp  DataStream.h  Exceptions.cpp  Exceptions.h  IEHCISwitcher.h  IFileSystem.h  IIPCSocket.h  IIPCTransport.h  IMessageVisitor.h  IModemControl.h  IPCSocketHandler.cpp  IPCSocketHandler.h  IPCWorkerThread.cpp  IPCWorkerThread.h  IProgressCallback.h  ISamsungIPCHAL.h  Log.cpp  Log.h  LogSink.cpp  LogSink.h  Makefile.am  Message.cpp  Message.h  MessageInspector.cpp  MessageInspector.h  Mutex.cpp  Mutex.h  PowerMessages.cpp  PowerMessages.h  RFSSocketHandler.cpp  RFSSocketHandler.h  SamsungModem.cpp  SamsungModem.h  Semaphore.cpp  Semaphore.h  SocketHandler.cpp  SocketHandler.h  (+9 more)
libsamsung-ipc/compiler/: compiler.rb  enum.rb  field.rb  generator.rb  message.rb  message_group.rb  protocol.rb  structure.rb
libsamsung-ipc/compiler/templates/: IUnsolicitedReceiver.h.erb  MessageFactory.cpp.erb  MessageFactory.h.erb  MessageTypes.h.erb  Messages.cpp.erb  Messages.h.erb  header.erb  source.erb  structure.cpp.erb  structure.h.erb
libsamsung-ipc/protocol/: call.rb  disp.rb  gen.rb  misc.rb  net.rb  power.rb  rfs.rb  sec.rb  snd.rb  ss.rb  svc.rb
libsamsung-ril/: AndroidFileSystem.cpp  AndroidFileSystem.h  CStyleException.cpp  CStyleException.h  Makefile.am  NativeFile.cpp  NativeFile.h  PHONETIPCSocket.cpp  PHONETIPCSocket.h  PHONETIPCTransport.cpp  PHONETIPCTransport.h  RILHAL.cpp  RILHAL.h  SysfsControlledDevice.cpp  SysfsControlledDevice.h  SysfsEHCISwitcher.cpp  SysfsEHCISwitcher.h  SysfsModemControl.cpp  SysfsModemControl.h
oemservice/: Android.mk  AndroidManifest.xml
oemservice/res/values/: strings.xml
oemservice/src/org/freeril/i9100oemservice/: CrossClientService.java  I9100OemService.java  ICrossClientService.aidl  IEventHandler.aidl  IOemUnsolicitedReceiver.java  IPhoneService.aidl  IRegistrationInterface.aidl  OEMRequestBuilder.java  OemRequestReply.aidl  OemRequestReply.java  PhoneService.java  RegistrationInterface.java  RegistrationService.java  RilInterface.java  RilRequestCompletionThread.java  StartupReceiver.java
ril/: Android.mk  AndroidLogSink.cpp  AndroidLogSink.h  ICompletionHandler.h  IRequestHandler.h  Makefile.am  MessageCache.cpp  MessageCache.h  OemRequestHandler.cpp  OemRequestHandler.h  OemUnsolicitedBuilder.cpp  OemUnsolicitedBuilder.h  RIL.cpp  RIL.h  RILDatabase.cpp  RILDatabase.h  Request.cpp  Request.h  RequestHandler.cpp  RequestHandler.h  RequestQueue.cpp  RequestQueue.h  RequestQueueWorkerThread.cpp  RequestQueueWorkerThread.h  UnsolicitedResponse.cpp  UnsolicitedResponse.h  call.cpp  config.h  display.cpp  misc.cpp  network.cpp  oem.cpp  power.cpp  ril.cpp  security.cpp  snd.cpp  timeval.c  timeval.h
secril-client-compat/: Android.mk  ICrossClientService.cpp  client.cpp
tools/: Android.mk  Makefile.am
tools/bootmodem/: Android.mk  Makefile.am  main.cpp
tools/dumpmodem/: Android.mk  Makefile.am  main.cpp
tools/extractfw/: Makefile.am  extractfw.cpp
tools/wireshark/: Makefile.am  dissectors.lua  hsic6260_boot.lua  hsic6260_boot_req.lua  phonet.lua
