#
# Free RIL implementation for Samsung Android-based smartphones.
# Copyright (C) 2012  Sergey Gridasov <grindars@gmail.com>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.
#

AC_INIT([freeril-i9100], [1.0.0], [grindars@gmail.com])
AM_INIT_AUTOMAKE
AC_PROG_RANLIB
AC_PROG_CXX
AC_PROG_CC

AC_OUTPUT([Makefile libsamsung-ipc/Makefile libandroidhal/Makefile
           ril/Makefile tools/Makefile tools/bootmodem/Makefile])
